--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-fast-marquee": "^1.5.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
+    "react-lazy-load": "^4.0.1",
     "react-router-dom": "^6.11.0",
     "sort-by": "^1.2.0"
   },
